tinyc/test/good/sizeof-after-paren.c
int main()
{
    assert( sizeof( char ) == 1 );
    assert( ( sizeof( char ) + 1 ) == 2 );
    return 0;
}
