tinyc/test/bad/void-comparison-with-zero.c
void v() {}

int main()
{
    v() == 0;
    return 0;
}
